feat: Add new Laravel manager application, update Ansible configurations, and remove outdated documentation.

--- a/projects.yml
+++ b/projects.yml
@@ -23,9 +23,7 @@
     
     ansible_remote_tmp: /tmp
 
-    projects:
-      - { name: "zone", repo: "git@github.com:visio-soft/zone.git", db: "zone_db", user: "zone_user" }
-      - { name: "gate", repo: "git@github.com:visio-soft/gate.git", db: "gate_db", user: "gate_user" }
+    projects: []
 
   tasks:
     # ==================================================================
