--- a/software.yml
+++ b/software.yml
@@ -156,60 +156,7 @@
       tags: [nodejs]
 
     # ==================================================================
-    # SECTION 5: DEVELOPMENT TOOLS
+    # SECTION 5: DEVELOPMENT TOOLS (MANAGED BY WEB UI)
     # ==================================================================
-    - name: Add DBeaver Repository (Ubuntu 24.04 GPG Fix)
-      shell: |
-        curl -fsSL https://dbeaver.io/debs/dbeaver.gpg.key | gpg --dearmor --yes -o /etc/apt/trusted.gpg.d/dbeaver.gpg
-        echo "deb https://dbeaver.io/debs/dbeaver-ce /" | tee /etc/apt/sources.list.d/dbeaver.list
-      args: { creates: /etc/apt/sources.list.d/dbeaver.list }
-      tags: [devtools]
+    # Removed legacy installation info. Now managed via Manager Interface.
 
-    - name: Add VS Code Repository (Ubuntu 24.04 GPG Fix)
-      shell: |
-        curl -fsSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor --yes -o /etc/apt/trusted.gpg.d/microsoft.gpg
-        echo "deb [arch=amd64] https://packages.microsoft.com/repos/code stable main" > /etc/apt/sources.list.d/vscode.list
-      args: { creates: /etc/apt/sources.list.d/vscode.list }
-      tags: [devtools]
-
-    - name: Install Development Tools
-      apt:
-        update_cache: yes
-        name:
-          - dbeaver-ce
-          - code
-        state: latest
-      tags: [devtools]
-
-    # ==================================================================
-    # SECTION 6: GOOGLE ANTIGRAVITY EDITOR (Optional)
-    # ==================================================================
-    - name: Create APT Keyrings Directory for Antigravity
-      file:
-        path: /etc/apt/keyrings
-        state: directory
-        mode: '0755'
-      tags: [antigravity]
-
-    - name: Add Google Antigravity Repository Key
-      shell: |
-        curl -fsSL https://us-central1-apt.pkg.dev/doc/repo-signing-key.gpg | gpg --dearmor --yes -o /etc/apt/keyrings/antigravity-repo-key.gpg
-      args: { creates: /etc/apt/keyrings/antigravity-repo-key.gpg }
-      tags: [antigravity]
-
-    - name: Add Google Antigravity Repository
-      shell: |
-        echo "deb [signed-by=/etc/apt/keyrings/antigravity-repo-key.gpg] https://us-central1-apt.pkg.dev/projects/antigravity-auto-updater-dev/ antigravity-debian main" | tee /etc/apt/sources.list.d/antigravity.list > /dev/null
-      args: { creates: /etc/apt/sources.list.d/antigravity.list }
-      tags: [antigravity]
-
-    - name: Install Google Antigravity Editor
-      apt:
-        update_cache: yes
-        name: antigravity
-        state: latest
-      tags: [antigravity]
-
-    - name: 🏁 Software Installation Complete
-      debug:
-        msg: "All selected software has been installed successfully!"
