--- a/setup.yml
+++ b/setup.yml
@@ -1,5 +1,5 @@
 ---
-- name: System Provisioning (PHP 8.4 + Nginx + Postgres)
+- name: Ubuntu 24.04 Software Installation
   hosts: localhost
   connection: local
   become: yes
@@ -8,10 +8,13 @@
     target_home: "{{ '/root' if target_user == 'root' else '/home/' + target_user }}"
     php_ver: "8.4"
     node_ver: "20"
+    ansible_remote_tmp: /tmp
 
-  
   tasks:
-    - name: Install System Packages
+    # ==================================================================
+    # SECTION 1: SYSTEM DEPENDENCIES AND USER
+    # ==================================================================
+    - name: Install Critical System Packages
       apt:
         update_cache: yes
         name: 
@@ -21,22 +24,74 @@
           - unzip
           - git
           - curl
+          - wget
+          - gpg
           - supervisor
+          - python3-psycopg2
+          - libpq-dev
+        state: present
+      tags: [system]
+
+    - name: Create User
+      user:
+        name: "{{ target_user }}"
+        shell: /bin/bash
+        groups: sudo,www-data
+        append: yes
+        create_home: yes
+      tags: [system]
+
+    - name: Grant Passwordless Sudo Access
+      lineinfile:
+        path: "/etc/sudoers.d/{{ target_user }}"
+        line: "{{ target_user }} ALL=(ALL) NOPASSWD: ALL"
+        create: yes
+        mode: '0440'
+        validate: 'visudo -cf %s'
+      tags: [system]
+
+    - name: Generate SSH Key
+      user:
+        name: "{{ target_user }}"
+        generate_ssh_key: yes
+        ssh_key_type: ed25519
+        ssh_key_file: "{{ target_home }}/.ssh/id_ed25519"
+      tags: [system]
+
+    # ==================================================================
+    # SECTION 2: ADD REPOSITORIES (Ubuntu 24.04 Compatible)
+    # ==================================================================
+    - name: Add PHP PPA
+      apt_repository: { repo: "ppa:ondrej/php", state: present }
+      tags: [php, nginx, database, redis]
+
+    - name: Add PostgreSQL Repository
+      shell: |
+        install -d /usr/share/postgresql-common/pgdg
+        curl -o /usr/share/postgresql-common/pgdg/apt.postgresql.org.asc --fail https://www.postgresql.org/media/keys/ACCC4CF8.asc
+        echo "deb [signed-by=/usr/share/postgresql-common/pgdg/apt.postgresql.org.asc] https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list
+      args: { creates: /etc/apt/sources.list.d/pgdg.list }
+      tags: [database]
+
+    # ==================================================================
+    # SECTION 3: INSTALL CORE SERVICES (Optimized Single Installation)
+    # ==================================================================
+    - name: Install PHP, Nginx, PostgreSQL, Redis (All Core Services)
+      apt:
+        update_cache: yes
+        state: latest
+        name:
+          # Nginx
           - nginx
+          # Redis
           - redis-server
+          # PostgreSQL
           - postgresql
           - postgresql-client
-          - nodejs
-        state: present
-
-    - name: Add PHP Repository
-      apt_repository: { repo: "ppa:ondrej/php", state: present }
-
-    - name: Install PHP
-      apt:
-        name:
+          # PHP and Extensions
           - "php{{ php_ver }}"
           - "php{{ php_ver }}-fpm"
+          - "php{{ php_ver }}-cli"
           - "php{{ php_ver }}-curl"
           - "php{{ php_ver }}-mbstring"
           - "php{{ php_ver }}-xml"
@@ -47,20 +102,61 @@
           - "php{{ php_ver }}-gd"
           - "php{{ php_ver }}-redis"
           - "php{{ php_ver }}-sqlite3"
-        state: latest
+          - "php{{ php_ver }}-imagick"
+          - "php{{ php_ver }}-soap"
+      tags: [php, nginx, database, redis]
 
-    - name: Install Composer
+    - name: Install Global Composer
       shell: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
       args: { creates: /usr/local/bin/composer }
+      tags: [php]
 
-    - name: Start Services
-      service:
-        name: "{{ item }}"
-        state: started
+    - name: Enable and Start PHP-FPM
+      systemd:
+        name: "php{{ php_ver }}-fpm"
         enabled: yes
-      loop:
-        - nginx
-        - "php{{ php_ver }}-fpm"
-        - postgresql
-        - redis-server
-        - supervisor
+        state: started
+      tags: [php]
+
+    - name: Enable and Start Nginx
+      systemd:
+        name: nginx
+        enabled: yes
+        state: started
+      tags: [nginx]
+
+    - name: Enable and Start PostgreSQL
+      systemd:
+        name: postgresql
+        enabled: yes
+        state: started
+      tags: [database]
+
+    - name: Enable and Start Redis
+      systemd:
+        name: redis-server
+        enabled: yes
+        state: started
+      tags: [redis]
+
+    # ==================================================================
+    # SECTION 4: NODE.JS
+    # ==================================================================
+    - name: Add Node.js Repository
+      shell: |
+        curl -fsSL https://deb.nodesource.com/setup_{{ node_ver }}.x -o /tmp/nodesource.sh && bash /tmp/nodesource.sh
+      args: { creates: /etc/apt/sources.list.d/nodesource.list }
+      tags: [nodejs]
+
+    - name: Install Node.js
+      apt:
+        update_cache: yes
+        name: nodejs
+        state: latest
+      tags: [nodejs]
+
+    # ==================================================================
+    # SECTION 5: DEVELOPMENT TOOLS (MANAGED BY WEB UI)
+    # ==================================================================
+    # Removed legacy installation info. Now managed via Manager Interface.
+
