feat: Redesign site cards with an improved layout, SSH terminal access, and action dropdowns, and ensure openssh-server is installed.

--- a/setup.yml
+++ b/setup.yml
@@ -29,6 +29,7 @@
           - supervisor
           - python3-psycopg2
           - libpq-dev
+          - openssh-server
         state: present
       tags: [system]
 
